Lien v2 dans nouvel onglet

--- a/WebContent/mz/prospect/panels/_visuFormation.xhtml
+++ b/WebContent/mz/prospect/panels/_visuFormation.xhtml
@@ -31,7 +31,7 @@
 						<ui:define name="label">
 							<h:outputText value="#{messages['prospect.reference']}" />
 						</ui:define>
-						<s:link view="/mz/formation/formation.xhtml"
+						<s:link view="/mz/formation/formation.xhtml" target="_blank"
 							action="#{formationManager.selectByReference}">
 							<f:param name="ref"
 								value="#{editProspectManager.prospect.reference}" />
