--- a/WebContent/mz/search/searchProspects.xhtml
+++ b/WebContent/mz/search/searchProspects.xhtml
@@ -193,7 +193,7 @@
 						</ui:include>
 
 					</f:facet>
-					<s:link view="/mz/formation/formation.xhtml"
+					<s:link view="/mz/formation/formation.xhtml" target="_blank"
 						action="#{formationManager.selectByReference}">
 						<f:param name="ref" value="#{_pDto.reference}" />
 						<s:conversationPropagation type="none" />
