--- a/WebContent/mz/search/_catalogueList.xhtml
+++ b/WebContent/mz/search/_catalogueList.xhtml
@@ -52,9 +52,9 @@
 					<img src="#{request.contextPath}/img/sort_up.png" width="10" />
 				</a:outputPanel>
 			</f:facet>
-			<s:link view="/mz/formation/formation.xhtml"
-				action="#{formationManager.select}">
-				<f:param name="formationId" value="#{_dto.formation.idFormation}" />
+			<s:link view="/mz/formation/formation.xhtml" target="_blank"
+				action="#{formationManager.selectByReference}">
+				<f:param name="ref" value="#{_dto.formation.reference}" />
 				<s:conversationPropagation type="none" />
 					#{_dto.formation.libelle}
 				</s:link>
