--- a/WebContent/mz/searchProspect_xls.xhtml
+++ b/WebContent/mz/searchProspect_xls.xhtml
@@ -49,7 +49,7 @@
 		</ui:include>
 		<ui:include src="common/excel-column.xhtml">
 			<ui:param name="header" value="#{messages['prospect.telephone']}" />
-			<ui:param name="value" value="#{_pdto.prospect.telephone}" />
+			<ui:param name="value" value="#{_pdto.prospect.tel}" />
 			<ui:param name="type" value="text" />
 		</ui:include>
 		<ui:include src="common/excel-column.xhtml">
