--- a/WebContent/mz/searchProspect_xls.xhtml
+++ b/WebContent/mz/searchProspect_xls.xhtml
@@ -53,7 +53,7 @@
 			<ui:param name="type" value="text" />
 		</ui:include>
 		<ui:include src="common/excel-column.xhtml">
-			<ui:param name="header" value="#{messages['prospect.nom']}" />
+			<ui:param name="header" value="#{messages['prospect.nomContact']}" />
 			<ui:param name="value" value="#{_pdto.prospect.nom}" />
 			<ui:param name="type" value="text" />
 		</ui:include>
